test/tests/operators/xsv/error_xsv_quotes_vs_field_sep.txt
error: quote character `,` conflicts with `field_separator=","`
 --> tests/operators/xsv/error_xsv_quotes_vs_field_sep.tql:6:76
  |
6 |   read_xsv field_separator=",", list_separator="|", null_value="-", quotes=","
  |                                                                            ^^^ 
  ⋮
6 |   read_xsv field_separator=",", list_separator="|", null_value="-", quotes=","
  |                            ^^^ 
  |
